certifications button styling

--- a/index.html
+++ b/index.html
@@ -458,10 +458,18 @@
 									</div>
 									
 									<!-- View More Button -->
-									<div class="view-more-container">
+									<!-- <div class="view-more-container">
 										<button id="view-more-certs" class="view-more-btn">View More Certifications</button>
+									</div> -->
+									<div class="view-more-container">
+										<button id="view-more-certs" class="view-more-btn enhanced">
+											<span>View More Certifications</span>
+											<i class="icon solid fa-angle-down"></i>
+										</button>
 									</div>
-									
+
+
+
 									<!-- Additional Certifications (Hidden Initially) -->
 									<div id="additional-certs" class="additional-certs" style="display: none;">
 										<!-- More Cert 1 -->
