certi button issue solved

--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
 									<!-- <div class="view-more-container">
 										<button id="view-more-certs" class="view-more-btn">View More Certifications</button>
 									</div> -->
-									<div class="view-more-container">
+									<div class="view-more-container" id="view-more-container">
 										<button id="view-more-certs" class="view-more-btn enhanced">
 											<span>View More Certifications</span>
 											<i class="icon solid fa-angle-down"></i>
