--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 								<div class="container">
 									<header class="major">
 										<h2>Decoded: Me</h2>
-										<p>CS grad student at Clemson with 2.5+ years of Data Analyst experience — turning data into decisions is kind of my thing.</p>
+										<p>CS Grad with 2.5+ years of Data Analytics experience | Turning data into decisions is kind of my thing.</p>
 									</header>
-									<p>I’m a data nerd with a business brain — turning messy data into smart, impactful solutions is my thing. Right now, I’m wrapping up my Master’s in Computer Science, specializing in Data Science, while building real-world projects that actually solve problems (not just look good on paper).</p>
-									<p>With a solid background in data analysis, I’ve seen firsthand how data drives decisions — now I’m leveling that up with ML to build tools that actually move the needle.</p>
+									<p>I’m a data nerd with a business brain, turning messy data into smart, impactful solutions is my thing. I've wrapped up my Master’s in Computer Science, with my specialization in Data Science, and have built real-world projects that actually solve problems (not just look good on paper).</p>
+									<p>With a solid background in data analytics, I’ve seen firsthand how data drives decisions and now I’m leveling that up with ML to build tools that actually move the needle.</p>
 									<p>I’m on the hunt for full-time roles in Data Science, ML, or Analytics where I can blend code, curiosity, and business savvy to make cool stuff happen.</p>
 									<p>Take a scroll through my portfolio, and if you like what you see, <u><a href="https://www.linkedin.com/in/danish-bhatkar/">reach out</a></u>! Let’s build something awesome together.</p>
 								</div>
@@ -214,6 +214,30 @@
 											<li>Analyzed supplier spending patterns using time series forecasting and regression analysis, optimizing a $3M+ procurement portfolio across 5 countries to minimize cost fluctuations.</li>
 											<li>Evaluated supplier performance metrics, driving 93% on-time delivery and reducing procurement costs by 7%.</li>
 											<li>Automated historical price analysis using DAX formulas, improving decision-making and reducing manual reporting effort by 10 hours per month.</li>
+										</ul>
+									</div>
+									<div class="job">
+										<h3>Clemson University</h3>
+										
+										<!-- First Position -->
+										<div class="job-details" style="display: flex; justify-content: space-between; align-items: center;">
+											<h4 class="position">ML Engineer</h4>
+											<span class="timeline">Jan 2025 - Jun 2025</span>
+										</div>
+										<ul class="responsibilities">
+											<li>Researched LoRA improvements by integrating a custom loss function into transformer-based models (e.g., GPT-2), achieving more efficient fine-tuning performance</li>
+											<li>Developed and tested a modified LoRA framework that maintained the number of trainable parameters while improving fine-tuning efficiency by 3% on large-scale text classification tasks</li>
+										</ul>
+										
+										<!-- Second Position -->
+										<div class="job-details" style="display: flex; justify-content: space-between; align-items: center; margin-top: 1.5rem;">
+											<h4 class="position">Teaching Assistant</h4>
+											<span class="timeline">Aug 2024 - Dec 2024</span>
+										</div>
+										<ul class="responsibilities">
+											<li>Led lab sessions on data structures, algorithms in C++, and MS Office applications (Excel & Access), covering topics from pivot tables to database management</li>
+											<li>Mentored students through individualized support, debugging assistance, and addressing diverse learning needs to enhance analytical and problem-solving skills</li>
+											<li>Designed and evaluated assignments focusing on algorithmic efficiency, scalability, and alignment with course objectives to ensure student skill progression</li>
 										</ul>
 									</div>
 								</div>
