--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
 										<!-- Featured Cert 1 -->
 										<div class="cert-card">
 											<div class="cert-logo">
-												<img src="images/LinkedIn.png" alt="AWS" />
+												<img src="images/aws-certified-cloud-practitioner.png" alt="AWS" />
 											</div>
 											<div class="cert-info">
 												<h4>AWS Certified Cloud Practitioner</h4>
