--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<footer>
 					<ul class="icons">
 						<li><a href="https://www.linkedin.com/in/danish-bhatkar/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://github.com/danishb7/danish-bhatkar" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
+						<li><a href="https://github.com/danishb7/" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
 						<li><a href="mailto:bhatkardanish7@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
