--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 										<p>CS Grad with 2.5+ years of Data Analytics experience | Turning data into decisions is kind of my thing.</p>
 									</header>
 									<p>I'm a data nerd with a business brain, turning messy data into smart, impactful solutions is my thing. I've completed my <strong>Master's</strong> in <strong>Computer Science</strong>, with specialization in <strong>Data Science</strong>, and have built real-world projects that actually solve problems (not just look good on paper).</p>
-									<p>With a solid background in <strong>data analytics</strong>, I've seen firsthand how data drives decisions and now I'm leveling that up with <strong>ML</strong> to build tools that actually move the needle.</p>
+									<p>With a solid background in <strong>Data Analytics</strong>, I've seen firsthand how data drives decisions and now I'm leveling that up with <strong>ML</strong> to build tools that actually move the needle.</p>
 									<p>Currently working as an <strong>Associate Tech Consultant</strong> at Perficient, where I blend code, curiosity, and business savvy to deliver innovative technology solutions for clients.</p>
 									<p>Take a scroll through my portfolio to see my journey in <strong>data science</strong>, <strong>machine learning</strong>, and <strong>analytics</strong>. If you'd like to connect or discuss potential collaborations, <u><a href="https://www.linkedin.com/in/danish-bhatkar/">reach out</a></u>!</p>
 								</div>
