--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>Decoded: Me</h2>
-										<p>CS Grad with 3+ years of Data Analytics experience | Turning data into decisions is kind of my thing.</p>
+										<p>Associate Tech Consultant | Data Science Professional turning data into strategic business solutions</p>
 									</header>
 									<p>I'm a data nerd with a business brain, turning messy data into smart, impactful solutions is my thing. I've completed my <strong>Master's</strong> in <strong>Computer Science</strong>, with specialization in <strong>Data Science</strong>, and have built real-world projects that actually solve problems (not just look good on paper).</p>
 									<p>With a solid background in <strong>Data Analytics</strong>, I've seen firsthand how data drives decisions and now I'm leveling that up with <strong>ML</strong> to build tools that actually move the needle.</p>
@@ -564,7 +564,7 @@
 							<section id="eight">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p>Feel free to reach out to me using the form below, or connect with me directly via Email or LinkedIn.</p>
+									<p>Feel free to reach out to me using the form below.</p>
 									
 									<!-- Contact Form -->
 									<form id="contact-form">
