--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 										  <span class="skill-tag">MS Excel (VBA),</span>
 										  <span class="skill-tag">Power Query,</span>
 										  <span class="skill-tag">Power Automate,</span>
-										  <span class="skill-tag">Alteryx</span>
+<!-- 										  <span class="skill-tag">Alteryx</span> -->
 									  </div>
 								  </div>
 							  </section> 
