--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 									  <div class="skill-list">
 										  <span class="skill-tag">MS Excel (VBA),</span>
 										  <span class="skill-tag">Power Query,</span>
-										  <span class="skill-tag">Power Automate,</span>
+										  <span class="skill-tag">Power Automate</span>
 <!-- 										  <span class="skill-tag">Alteryx</span> -->
 									  </div>
 								  </div>
